changed Flashcards to FlashcardPackage